[metadata]
name = miqbox
author = Nikhil Dhandre
author_email = nik.digitronik@live.com
license_file = LICENSE
description = Spin ManageIQ/CFME Appliance locally.
keywords =
    miqbox
    ManageIQ
    CFME
    cloudform
url = https://github.com/digitronik/miqbox
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: End Users/Desktop
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    bs4
    Click
    libvirt-python
    paramiko
    requests
    ruamel.yaml
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    miqbox=miqbox:main

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
